# virtual_assistant

./: .gitignore  assistant.py  commands.py  pyproject.toml
