[tool.poetry]
name = "virtual-assistant"
version = "0.1.0"
description = ""
authors = ["Gustavo <gustavooliveirarei35@gmail.com>"]
readme = "README.md"
packages = [{include = "virtual_assistant"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
wikipedia = "^1.4.0"
pywhatkit = "^5.4"
pyttsx3 = "^2.90"
speechrecognition = "^3.10.0"
pyjokes = "^0.6.0"
pyaudio = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
